Update fonts and link icon

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
-    <title>Paulina Rams</title>
+    <title>𝗣𝗮𝘂𝗹𝗶𝗻𝗮 𝗥𝗮𝗺𝘀 graphic designer</title>
+    <link rel="icon" href="./images/smile.png">
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
-    <link rel="stylesheet" href="./fonts/AuthenticSans90.css" type="text/css">
-    <link rel="stylesheet" href="./fonts/WonderType.css" type="text/css">
+    <link rel="stylesheet" href="./fonts/AuthenticSans/AuthenticSans90.css" type="text/css">
+    <link rel="stylesheet" href="./fonts/WonderType/WonderType.css" type="text/css">
     <script src="https://kit.fontawesome.com/f367fe4f2a.js" crossorigin="anonymous"></script>
 </head>
 
