--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
     <title>𝗣𝗮𝘂𝗹𝗶𝗻𝗮 𝗥𝗮𝗺𝘀 graphic designer</title>
     <link rel="icon" href="./images/smile.png">
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
-    <link rel="stylesheet" href="./fonts/AuthenticSans/AuthenticSans90.css" type="text/css">
-    <link rel="stylesheet" href="./fonts/WonderType/WonderType.css" type="text/css">
+    <link rel="stylesheet" href="./fonts/stylesheet.css" type="text/css">
     <script src="https://kit.fontawesome.com/f367fe4f2a.js" crossorigin="anonymous"></script>
 </head>
 
