--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <div class="box work-box">
         <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
             target="_blank">
-            <p class="click work-click">work</p>
+            <p class="click work-click workabout">work</p>
         </a>
     </div>
 
