--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="home-bg">
-    <img id="chrome-flower" class="png flower" src="./images/home/flower.png" alt="Metallic flower.">
+    <img class="png flower" src="./images/home/flower.png" alt="Metallic flower.">
     <img class="png shape left" src="./images/home/shape1_left.png">
     <img class="png shape right" src="./images/home/shape1_right.png">
 
