--- a/index.html
+++ b/index.html
@@ -16,34 +16,39 @@
     <img class="png shape left" src="./images/home/shape1_left.png">
     <img class="png shape right" src="./images/home/shape1_right.png">
 
-    <div class="box name-box">
-        <h1 class="name first">PAULINA</h1>
-        <h1 class="name last">RAMS</h1>
-        <img class="smol" src="./images/home/photo smol.png" alt="Very small photo of Paulina.">
-        <p class="whoareyou">visual artist / designer</p>
-    </div>
+    <div class="home container">
 
-    <div id="spin" class="box work-box">
-        <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
-            target="_blank">
-            <p class="click work-click">work</p>
-        </a>
-    </div>
+        <div class="box name-box">
+            <h1 class="name first">PAULINA</h1>
+            <h1 class="name last">RAMS</h1>
+            <img class="smol" src="./images/home/photo smol.png" alt="Very small photo of Paulina.">
+            <p class="whoareyou">visual artist / designer</p>
+        </div>
 
-    <div class="box about-box">
-        <a href="./about.html">
-            <p class="click about-click">about</p>
-        </a>
-    </div>
+        <div class="box work-box">
+            <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
+                target="_blank">
+                <p class="click work-click">work</p>
+            </a>
+        </div>
 
-    <div class="box socials-box">
-        <a href="https://www.instagram.com/ramspaulina/" target="_blank"><i
-                class="fa-brands fa-instagram fa-2xl"></i></a>
-        <a href="https://www.facebook.com/paulina.rams.73" target="_blank"><i
-                class="fa-brands fa-facebook fa-2xl"></i></a>
-        <a href="https://open.spotify.com/user/paulinarams?si=cb6a6187e20e453c" target="_blank"><i
-                class="fa-brands fa-spotify fa-2xl fa-spin"></i></a>
-        <a href="https://www.behance.net/ramspaulin4ca8" target="_blank"><i class="fa-brands fa-behance fa-2xl"></i></a>
+        <div class="box about-box">
+            <a href="./about.html">
+                <p class="click about-click">about</p>
+            </a>
+        </div>
+
+        <div class="box socials-box">
+            <a href="https://www.instagram.com/ramspaulina/" target="_blank"><i
+                    class="fa-brands fa-instagram fa-2xl"></i></a>
+            <a href="https://www.facebook.com/paulina.rams.73" target="_blank"><i
+                    class="fa-brands fa-facebook fa-2xl"></i></a>
+            <a href="https://open.spotify.com/user/paulinarams?si=cb6a6187e20e453c" target="_blank"><i
+                    class="fa-brands fa-spotify fa-2xl fa-spin"></i></a>
+            <a href="https://www.behance.net/ramspaulin4ca8" target="_blank"><i
+                    class="fa-brands fa-behance fa-2xl"></i></a>
+        </div>
+
     </div>
 
     <div class="error"></div>
