--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body class="about-bg">
     <img class="png pr" src="./images/about/PR.png" alt="Metallic initials.">
 
-    <div class="home container">
+    <div class="aboutpage container">
 
         <div class="box name-box">
             <h1 class="first">PAULINA</h1>
@@ -28,9 +28,10 @@
             </div>
         </div>
 
-        <div class="box about-box">
-            <a href="./index.html">
-                <p class="click about-click"><em>home</em></p>
+        <div id="spin" class="box work-box">
+            <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
+                target="_blank">
+                <p class="click work-click workabout">work</p>
             </a>
         </div>
 
@@ -62,10 +63,9 @@
             </div>
         </div>
 
-        <div class="box work-box">
-            <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
-                target="_blank">
-                <p class="click work-click workabout">work</p>
+        <div class="box about-box">
+            <a href="./index.html">
+                <p class="click about-click"><em>return</em></p>
             </a>
         </div>
 
