--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="png shape left" src="./images/home/shape1_left.png">
     <img class="png shape right" src="./images/home/shape1_right.png">
 
-    <div class="home container">
+    <div class="homepage container">
 
         <div class="box name-box">
             <h1 class="name first">PAULINA</h1>
@@ -25,7 +25,7 @@
             <p class="whoareyou">visual artist / designer</p>
         </div>
 
-        <div class="box work-box">
+        <div id="spin" class="box work-box">
             <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
                 target="_blank">
                 <p class="click work-click">work</p>
