--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <img class="png shape left" src="./images/home/shape1_left.png">
     <img class="png shape right" src="./images/home/shape1_right.png">
 
+
+
     <div class="homepage container">
 
         <div class="box name-box">
@@ -25,7 +27,7 @@
             <p class="whoareyou">visual artist / designer</p>
         </div>
 
-        <div id="wzium" class="box work-box">
+        <div id="wzium" class="work-box">
             <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
                 target="_blank">
                 <p class="click work-click">work</p>
@@ -55,6 +57,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/jquery.ripples.js"></script>
     <script type="text/javascript" src="./js/custom.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 
 </html>
