--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
 </head>
 
 <body class="about-bg">
+    <div class="cursor"></div>
+
     <img class="png pr" src="./images/about/PR.png" alt="Metallic initials.">
 
     <div class="aboutpage container">
