--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body class="home-bg">
+    <div class="cursor"></div>
+
     <img class="png flower" src="./images/home/flower.png" alt="Metallic flower.">
     <img class="png shape left" src="./images/home/shape1_left.png">
     <img class="png shape right" src="./images/home/shape1_right.png">
