--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
         <div class="box socials-box">
             <a href="https://www.instagram.com/ramspaulina/" target="_blank"><i
                     class="fa-brands fa-instagram fa-2xl"></i></a>
-            <a href="https://www.facebook.com/paulina.rams.73" target="_blank"><i
-                    class="fa-brands fa-facebook fa-2xl"></i></a>
+            <!-- <a href="https://www.facebook.com/paulina.rams.73" target="_blank"><i
+                    class="fa-brands fa-facebook fa-2xl"></i></a> -->
             <a href="https://open.spotify.com/user/paulinarams?si=cb6a6187e20e453c" target="_blank"><i
                     class="fa-brands fa-spotify fa-2xl fa-spin"></i></a>
             <a href="https://www.behance.net/ramspaulin4ca8" target="_blank"><i
