--- a/about.html
+++ b/about.html
@@ -17,7 +17,6 @@
     <img class="png pr" src="./images/about/PR.png" alt="Metallic initials.">
 
     <div class="aboutpage container">
-
         <div class="box name-box">
             <h1 class="first">PAULINA</h1>
             <h1 class="last">RAMS</h1>
@@ -72,16 +71,18 @@
         </div>
 
         <div class="box socials-box">
-            <a href="https://www.instagram.com/ramspaulina/" target="_blank"><i
-                    class="fa-brands fa-instagram fa-2xl"></i></a>
+            <a href="https://www.instagram.com/ramspaulina/" target="_blank">
+                <i class="fa-brands fa-instagram fa-2xl"></i>
+            </a>
             <!-- <a href="https://www.facebook.com/paulina.rams.73" target="_blank"><i
                     class="fa-brands fa-facebook fa-2xl"></i></a> -->
-            <a href="https://open.spotify.com/user/paulinarams?si=cb6a6187e20e453c" target="_blank"><i
-                    class="fa-brands fa-spotify fa-2xl fa-spin"></i></a>
-            <a href="https://www.behance.net/ramspaulin4ca8" target="_blank"><i
-                    class="fa-brands fa-behance fa-2xl"></i></a>
+            <a href="https://open.spotify.com/user/paulinarams?si=cb6a6187e20e453c" target="_blank">
+                <i class="fa-brands fa-spotify fa-2xl fa-spin"></i>
+            </a>
+            <a href="https://www.behance.net/ramspaulin4ca8" target="_blank">
+                <i class="fa-brands fa-behance fa-2xl"></i>
+            </a>
         </div>
-
     </div>
 
     <div class="error"></div>
