--- a/about.html
+++ b/about.html
@@ -12,7 +12,18 @@
 </head>
 
 <body class="about-bg">
-    <div class="cursor"></div>
+    <div id="mouse">
+        <div class="circle big">
+            <svg height="40" width="40">
+                <circle cx="20" cy="20" r="20" stroke-width="0"></circle>
+            </svg>
+        </div>
+        <div class="circle small">
+            <svg height="10" width="10">
+                <circle cx="5" cy="5" r="5" stroke-width="0"></circle>
+            </svg>
+        </div>
+    </div>
 
     <img class="png pr" src="./images/about/PR.png" alt="Metallic initials.">
 
