--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body class="home-bg">
-    <div class="cursor"></div>
+    <div id="mouse">
+        <div class="circle big">
+            <svg height="40" width="40">
+                <circle cx="20" cy="20" r="20" stroke-width="0"></circle>
+            </svg>
+        </div>
+        <div class="circle small">
+            <svg height="10" width="10">
+                <circle cx="5" cy="5" r="5" stroke-width="0"></circle>
+            </svg>
+        </div>
+    </div>
 
     <img class="png flower" src="./images/home/flower.png" alt="Metallic flower.">
     <img class="png shape left" src="./images/home/shape1_left.png">
@@ -43,8 +54,6 @@
             <a href="https://www.instagram.com/ramspaulina/" target="_blank">
                 <i class="fa-brands fa-instagram fa-2xl"></i>
             </a>
-            <!-- <a href="https://www.facebook.com/paulina.rams.73" target="_blank"><i
-                    class="fa-brands fa-facebook fa-2xl"></i></a> -->
             <a href="https://open.spotify.com/user/paulinarams?si=cb6a6187e20e453c" target="_blank">
                 <i class="fa-brands fa-spotify fa-2xl fa-spin"></i>
             </a>
