--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
     <img class="png pr" src="./images/about/PR.png" alt="Metallic initials.">
 
     <div class="aboutpage container">
+        
         <div class="box name-box">
             <h1 class="first">PAULINA</h1>
             <h1 class="last">RAMS</h1>
@@ -40,12 +41,14 @@
             </div>
         </div>
 
-        <div id="wzium" class="work-box">
+        <svg class="work-box" xmlns="http://www.w3.org/2000/svg" width="110" height="60">
+            <ellipse cx="55" cy="30" rx="50" ry="25" fill="none" stroke-width="3px" stroke="#000"></ellipse>
             <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
                 target="_blank">
-                <p class="click work-click">work</p>
+                <text x="50%" y="50%" class="work-click" text-anchor="middle" fill="#000" font-size="36px"
+                    dy=".3em">work</text>
             </a>
-        </div>
+        </svg>
 
         <div class="box text-box">
             <div class="mail">
