--- a/home.html
+++ b/home.html
@@ -43,14 +43,14 @@
             <p class="whoareyou">visual artist / designer</p>
         </div>
 
-        <svg class="work-box" xmlns="http://www.w3.org/2000/svg" width="110" height="60">
+        <!-- <svg class="work-box" xmlns="http://www.w3.org/2000/svg" width="110" height="60">
             <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
                 target="_blank">
                 <ellipse cx="55" cy="30" rx="50" ry="25" fill="transparent" stroke-width="3px" stroke="#000"></ellipse>
                 <text x="50%" y="50%" class="work-click" text-anchor="middle" fill="#000" font-size="36px"
                     dy=".3em">work</text>
             </a>
-        </svg>
+        </svg> -->
 
         <div class="box about-box">
             <a href="./about.html">
