--- a/index.html
+++ b/index.html
@@ -13,19 +13,6 @@
 
 <body class="home-bg">
 
-    <div id="mouse">
-        <div class="circle big">
-            <svg height="40" width="40">
-                <circle cx="20" cy="20" r="20" stroke-width="0"></circle>
-            </svg>
-        </div>
-        <div class="circle small">
-            <svg height="10" width="10">
-                <circle cx="5" cy="5" r="5" stroke-width="0"></circle>
-            </svg>
-        </div>
-    </div>
-
     <img class="png shape left" src="./images/home/shape1_left.png">
     <img class="png shape right" src="./images/home/shape1_right.png">
 
@@ -48,7 +35,7 @@
             <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
                 target="_blank">
                 <ellipse cx="55" cy="30" rx="50" ry="25" fill="transparent" stroke-width="3px" stroke="#000"></ellipse>
-                <text x="50%" y="50%" class="work-click" text-anchor="middle" fill="#000" font-size="36px"
+                <text class="work-click" x="50%" y="50%" class="work-click" text-anchor="middle" fill="#000" font-size="36px"
                     dy=".3em">work</text>
             </a>
         </svg>
