--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="./images/smile.ico" />
-    <title>𝗣𝗮𝘂𝗹𝗶𝗻𝗮 𝗥𝗮𝗺𝘀 graphic designer</title>
+    <title>Paulina Rams | graphic designer | visual artist  ◕‿◕｡</title>
     <link rel="icon" href="./images/smile.png">
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
     <link rel="stylesheet" href="./fonts/stylesheet.css" type="text/css">
     <script src="https://kit.fontawesome.com/f367fe4f2a.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://kmetho.github.io/paulinarams/" />
+    <link rel="canonical" href="https://paulinarams.com/" />
     <meta property="og:image" content="./images/smile.ico" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Paulina Rams" />
-    <meta property="og:url" content="https://kmetho.github.io/paulinarams/" />
-    <meta property="og:site_name" content="Paulina Rams" />
-    <meta name="description" content="pending" />
+    <meta property="og:title" content="Paulina Rams | graphic designer | visual artist  ◕‿◕｡" />
+    <meta property="og:url" content="https://paulinarams.com/" />
+    <meta property="og:site_name" content="Paulina Rams | graphic designer | visual artist  ◕‿◕｡" />
+    <meta name="description" content="Paulina Rams | graphic designer | visual artist  ◕‿◕｡" />
 </head>
 
 <body class="home-bg">
