--- a/about.html
+++ b/about.html
@@ -12,18 +12,7 @@
 </head>
 
 <body class="about-bg">
-    <div id="mouse">
-        <div class="circle big">
-            <svg height="40" width="40">
-                <circle cx="20" cy="20" r="20" stroke-width="0"></circle>
-            </svg>
-        </div>
-        <div class="circle small">
-            <svg height="10" width="10">
-                <circle cx="5" cy="5" r="5" stroke-width="0"></circle>
-            </svg>
-        </div>
-    </div>
+
 
     <img class="png pr" src="./images/about/PR.png" alt="Metallic initials.">
 
@@ -41,14 +30,12 @@
             </div>
         </div>
 
-        <svg class="work-box" xmlns="http://www.w3.org/2000/svg" width="110" height="60">
-            <ellipse cx="55" cy="30" rx="50" ry="25" fill="none" stroke-width="3px" stroke="#000"></ellipse>
+        <div class="box work-box">
             <a href="https://www.figma.com/proto/IDiu9gWKBNDh9FXewjC1LY/folio?page-id=0%3A1&node-id=12%3A11&viewport=392%2C592%2C0.03&scaling=contain"
                 target="_blank">
-                <text x="50%" y="50%" class="work-click" text-anchor="middle" fill="#000" font-size="36px"
-                    dy=".3em">work</text>
+                <p class="work-click">work</p>
             </a>
-        </svg>
+        </div>
 
         <div class="box text-box">
             <div class="mail">
