--- a/about.html
+++ b/about.html
@@ -88,9 +88,9 @@
 
     <div class="error"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/jquery.ripples.js"></script>
-    <script type="text/javascript" src="./js/custom.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./src/jquery.ripples.js"></script>
+    <script type="text/javascript" src="./src/custom.js"></script>
+    <script type="text/javascript" src="./src/index.js"></script>
 </body>
 
 </html>
